--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3106,6 +3106,23 @@ table.mvx-settings-table-wrap {
   border: 0.06rem solid #d4d1d9;
   border-radius: 0.25rem;
 }
+a.catalog-live-preview {
+  color: #df5d65 !important;
+  background-color: #f8dbdd !important;
+  font-weight: 500;
+  i{
+    color: #df5d65 !important;
+  }
+}
+a.catalog-upgrade {
+  color: #F9f8fb !important;
+  background: linear-gradient(110deg, #3f1473 0, #af3b74 50%, #db4b54 100%) !important;
+  line-height: 1.5;
+  font-weight: 500;
+  i{
+    color: #F9f8fb!important;
+  }
+}
 /*new css end here*/
 //responsive code are here
 @media only screen and (min-width: 767px) {
@@ -3182,7 +3199,7 @@ table.mvx-settings-table-wrap {
     width:22%
   }
   .mvx-tab-content{
-  width:78%;
+  width:68%;
 }}
 .mvx-compare-table-holder{
 li.mvx-compare-table-row{
