--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3123,6 +3123,9 @@ a.catalog-upgrade {
     color: #F9f8fb!important;
   }
 }
+.css-1nmdiq5-menu { 
+  z-index: 9 !important;
+}
 /*new css end here*/
 //responsive code are here
 @media only screen and (min-width: 767px) {
